Revert "Fix navbar width overflow"

--- a/app/static/scss/components/_navbar.scss
+++ b/app/static/scss/components/_navbar.scss
@@ -11,8 +11,6 @@
   justify-content: space-between;
   position: relative;  // <==== Ensure context for absolute dropdowns
   z-index: 1000;
-  max-width: 95%;
-  margin: 0 auto;
 
   .navbar-brand {
     font-family: 'Arial', sans-serif;
